# coenobita

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  install.sh  run.sh  rust-toolchain.toml  rustfmt.toml
compiler/coenobita-ast/: Cargo.toml
compiler/coenobita-ast/src/: ast.rs  flow.rs  lib.rs  provenance.rs
compiler/coenobita-bin/: Cargo.toml
compiler/coenobita-bin/src/: callbacks.rs  main.rs
compiler/coenobita-check/: Cargo.toml
compiler/coenobita-check/src/: cx.rs  expectation.rs  lib.rs  shared.rs
compiler/coenobita-decl/: Cargo.toml
compiler/coenobita-decl/src/: lib.rs
compiler/coenobita-integrityck/: Cargo.toml
compiler/coenobita-integrityck/src/: checker.rs  context.rs  expectation.rs  lib.rs  shared.rs
compiler/coenobita-log/: Cargo.toml
compiler/coenobita-log/src/: lib.rs
compiler/coenobita-middle/: Cargo.toml
compiler/coenobita-middle/src/: flow.rs  lib.rs  map.rs  origin.rs  property.rs  provenance.rs  set.rs  ty.rs
compiler/coenobita-parse/: Cargo.toml
compiler/coenobita-parse/src/: lib.rs  parse.rs  token.rs
compiler/coenobita-provck/: Cargo.toml
compiler/coenobita-provck/src/: checker.rs  context.rs  lib.rs  shared.rs
compiler/coenobita-provenanceck/: Cargo.toml
compiler/coenobita-provenanceck/src/: lib.rs
crates/coenobita-ast/: Cargo.toml
crates/coenobita-ast/src/: ast.rs  flow.rs  lib.rs  provenance.rs
crates/coenobita-bin/: Cargo.toml
crates/coenobita-bin/src/: callbacks.rs  main.rs  utilities.rs
crates/coenobita-integrityck/src/: checker.rs  context.rs  lib.rs  utilities.rs
crates/coenobita-log/src/: lib.rs
crates/coenobita-middle/: Cargo.toml
crates/coenobita-middle/src/: flow.rs  lib.rs  map.rs  provenance.rs  ty.rs
crates/coenobita-parse/: Cargo.toml
crates/coenobita-parse/src/: lib.rs
crates/coenobita-provenanceck/: Cargo.toml
crates/coenobita-provenanceck/src/: checker.rs  lib.rs
crates/coenobita-typeck/: Cargo.toml
crates/coenobita-typeck/src/: checker.rs  context.rs  lib.rs
declarations/: fn.d.rs
examples/: cap_macro_with_path.rs  copy.rs  del_ino_test.rs  directories.rs  file_methods.rs  file_read_write_seek.rs  macro_capability.rs  manual_capability.rs  new_macro.rs  open_options.rs  rename.rs
examples/files/: afternoon_miracle_original.txt  example_copied.txt  mc_read_write.txt  mc_write.txt
intrinsics/: generator.py  protected-functions.txt  provenance.json  traits.json
intrinsics/annotations/: integrity.json  provenance.json
macros/: Cargo.toml
macros/src/: lib.rs
playground/: Cargo.toml  output.json
playground/src/: main.rs
src/: callbacks.rs  fs.rs  lib.rs  main.rs  utilities.rs
tests/: README.md
tests/a/: Cargo.toml
tests/a/src/: integrity.rs  lib.rs  provenance.rs
tests/a/src/integrity/: closures.rs  enums.rs  if_else.rs  loops.rs  methods.rs  mod.rs  patterns.rs  unorganized.rs
tests/a/src/integrity/fail/: let.rs
tests/a/src/integrity/pass/: let.rs
tests/a/tests/: test.rs
tests/a/tests/integrity/fail/closure/: closure.0.rs  closure.0.stderr  closure.1.rs  closure.1.stderr  closure.2.rs  closure.2.stderr  closure.3.rs  closure.3.stderr
tests/a/tests/integrity/fail/fn/: fn.0.rs  fn.0.stderr  fn.1.rs  fn.2.rs  (+4 more)
tests/b/: Cargo.toml
tests/b/src/: lib.rs
tests/c/.cargo/: config.toml
tests/c/src/: lib.rs
tests/d/: Cargo.toml
tests/d/src/: lib.rs
tests/root-crate/: Cargo.toml
tests/root-crate/src/: main.rs
unused/: open_options.rs
(+76 files in other folders)
