[workspace]
members = [ "compiler/*", "playground"]
exclude = ["tests"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
coenobita-ast = { path = "./compiler/coenobita-ast" }
coenobita-bin = { path = "./compiler/coenobita-bin" }
coenobita-middle = { path = "./compiler/coenobita-middle" }
coenobita-parse = { path = "./compiler/coenobita-parse" }
coenobita-check = { path = "./compiler/coenobita-check" }

itertools = "0.13.0"
simplelog = "0.12"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
