[package]
name = "coenobita-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coenobita"
path = "src/main.rs"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
# coenobita-integrityck.workspace = true
# coenobita-provck.workspace = true
coenobita-middle.workspace = true
coenobita-check.workspace = true

simplelog.workspace = true
log.workspace = true
