[package]
name = "coenobita-check"
version = "0.1.0"
edition.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
coenobita-middle.workspace = true
coenobita-parse.workspace = true
coenobita-decl.workspace = true

itertools.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

clippy_utils = "=0.1.87"