[package]
name = "coenobita-integrityck"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
coenobita-ast.workspace = true
coenobita-log.workspace = true
coenobita-middle.workspace = true
coenobita-parse.workspace = true
itertools.workspace = true